fixed sidebar spacing for smaller screens

--- a/api_app/static/api_app/css/notification.css
+++ b/api_app/static/api_app/css/notification.css
@@ -93,7 +93,7 @@
 
 @media only screen and (max-width: 600px) {
   #sidebar {
-    margin-left: -250px !important;
+    margin-left: -100px !important;
   }
   #temp-grid {
     width: 50%;
